<resources>
    <string name="app_name">Wishify</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="add_new_item">Add a new item to your list</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Add Item -->
    <string name="item_name_hint">Name</string>
    <string name="item_desc_hint">Description?</string>
    <string name="item_price_hint">Price?</string>
    <string name="item_category">Category?</string>
    <string name="item_location">Current store</string>
    <string name='done'>Done</string>
    <string name="add_place_hint">Know where you want to buy it from?</string>
    <string name="search_below">Use the search bar below</string>
    <string name="add_place">Add Store</string>
    <string name="change_place">Change Store</string>
    <string name="add_fab">Add</string>

    <!-- Item List -->
    <string name="clear_all_items">Clear all Items</string>
    <string name="mark_purchased_text">Purchased</string>
    <string name="edit_item_text">Edit</string>
    <string name="delete_item_text">Delete</string>
    <string name="empty_list_text">Your list is empty!\nAdd an item using the button below</string>

    <!-- Item View -->
    <string name="placeholder">This is some placeholder text</string>
    <string name="price_format">£%1$.2f</string>

    <!-- Item Menu  -->
    <string name="mark_purchased">Mark as Purchased</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>

    <!-- Search -->
    <string name="search_view_hint">Search your items</string>

    <!-- Location -->
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat/long used</string>
    <string name="no_location">There is no location found</string>
    <string name="no_address_found">No address found</string>
    <string name="location_text">"Latitude: %1$.4f \nLongitude: %2$.4f \nTimestamp: %3$tr"</string>
    <string name="address_text">"Address: %1$s \nTimestamp: %2$tr"</string>

    <!-- Map -->
    <string name="dropped_pin">Dropped Pin</string>
    <string name="expand_map">Expand Map</string>

    <!-- Dialog -->
    <string name="dialog_title">Clear List</string>
    <string name="dialog_message">Are you sure you want clear your list?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_cancel">No</string>

    <string-array name="categories_array">
        <item>Bicycle</item>
        <item>Book</item>
        <item>Clothing</item>
        <item>Electronic</item>
        <item>Flowers</item>
        <item>Jewellery</item>
        <item>Other</item>
    </string-array>
</resources>