<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:checkedIcon="@drawable/shopping_bag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/itemNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_hint"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/itemDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/item_desc_hint"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/black" />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/purchased_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_purchased_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_item_text" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>